--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="h2">homework</span>
                   </span>
                
-                <li>homework 1 (TBD)</li>
+                  <li><a href="https://docs.google.com/document/d/1OanIBpoPGwGCSaPGS0gHCMUh03ULcU9SDDmAzLa9ihc/edit?usp=sharing">homework 1</a></li>
             </section>
 
             <section id="inspiration">
