--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     
                 <li><a href="tutorials/tutorial01/index.html">tutorial 1</a></li>
                 <li>tutorial 3 (this page)</li>
-                <li>tutorial 4 (TBD)</li>
+                <li><a href="tutorials/tutorial04/index.html">tutorial 4</a></li>
             </section>
 
             <section id="homework">
