--- a/tutorials/tutorial04/index.html
+++ b/tutorials/tutorial04/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <title>Tutorial 03</title>
-  <link rel="stylesheet" href="./style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8">
+    <title>Tutorial 04</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -13,37 +12,37 @@
 <div class="container">
    <!-- left menu -->
    <section class="menu1">
-      <div>Menu 1</div>
+      Menu 1
    </section>
-   
+
    <!-- right menu -->
    <section class="menu2">
-      <div>Menu 2</div>
+      Menu 2
    </section>
 
    <!-- card 1 -->
    <article class="card1">
-      <section>Card 1</section>
+      Card 1
    </article>
 
    <!-- card 2 -->
    <article class="card2">
-      <section>Card 2</section>
+      Card 2
    </article>
 
    <!-- card 3 -->
    <article class="card3">
-      <section>Card 3</section>
+      Card 3
    </article>
-   
+
    <!-- main content on bottom -->
    <main class="main">
-      <section>Featured Content</section>
+      Featured Content
    </main>
-   
+
    <!-- right navigation bar -->
    <aside class="aside">
-      <section>Sidebar</section>
+      Sidebar
    </aside>
 </div>
 <!-- partial -->
