--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="tutorials/tutorial05/01-font-switcher/index.html">font switcher</a></li>
                     <li><a href="tutorials/tutorial05/02-theme-switcher/index.html">theme switcher</a></li>
                     </ul>
+                <li><a href="tutorials/tutorial06/index.html">tutorial 4</a></li>
                 </ul> 
             </section>
 
