--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <ul> 
                   <li><a href="https://docs.google.com/document/d/1OanIBpoPGwGCSaPGS0gHCMUh03ULcU9SDDmAzLa9ihc/edit?usp=sharing">homework 1</a></li>
                   <li><a href="homework/hw02/index.html">homework 2</a></li>
+                  <li><a href="homework/hw03/index.html">homework 3</a></li>
                 </ul> 
             </section>
 
