--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                   <li><a href="https://docs.google.com/document/d/1OanIBpoPGwGCSaPGS0gHCMUh03ULcU9SDDmAzLa9ihc/edit?usp=sharing">homework 1</a></li>
                   <li><a href="homework/hw02/index.html">homework 2</a></li>
                   <li><a href="homework/hw03/index.html">homework 3</a></li>
+                  <li><a href="homework/hw04/your_task/index.html">homework 4</a></li>
                 </ul> 
             </section>
 
