--- a/homework/hw04/your_task/index.html
+++ b/homework/hw04/your_task/index.html
@@ -31,15 +31,15 @@
             <article id="featured-content">
                 <section id="artist-section">
                     <h1>Top Result</h1>
-                    <section id="artist"></section>
+                    <section id="artist"> ⬆️ Search for Artists or Songs 🎶 </section>
                 </section>
                 <section id="track-section">
                     <h1>Songs</h1>
-                    <section id="tracks"></section>
+                    <section id="tracks">🌻 🌻 🌻</section>
                 </section>
                 <section id="album-section">
                     <h1>Albums</h1>
-                    <section id="albums"></section>
+                    <section id="albums">🌷 🌷 🌷</section>
                 </section>
             </article>
         </main>
